Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -42,16 +42,8 @@ steps:
     pip install unittest-xml-reporting
   displayName: 'Install prerequisites'
 
-- task: ArchiveFiles@2
-  inputs:
-    rootFolderOrFile: '**/*'
-    includeRootFolder: true
-    archiveType: 'zip'
-    archiveFile: '$(Build.ArtifactStagingDirectory)/$(Build.BuildId).zip'
-    replaceExistingArchive: true
-
 - task: PublishBuildArtifacts@1
   inputs:
-    PathtoPublish: '$(Build.ArtifactStagingDirectory)'
+    PathtoPublish: '**/*'
     ArtifactName: 'drop'
     publishLocation: 'Container'
