--- a/appspec.yml
+++ b/appspec.yml
@@ -1,13 +1,19 @@
-#!/usr/bin/env bash
-
-# Install libaries
-cd /var/www/backend
-virtualenv -p python3 venv
-source venv/bin/activate
-python -m pip install --upgrade pip setuptools wheel
-pip install -r DjangoProject/mysite/requirements.txt
-python manage.py mysite
-python manage.py collectstatic --no-input
-
-# Set permission for all files
-sudo chown -R www-data:www-data /var/www/
+version: 0.0
+os: linux
+files:
+  - source: /
+    destination: /var/www/backend
+  - source: server_configs/nginx/backend.conf
+    destination: /etc/nginx/sites-enabled/
+    runas: ubuntu
+  - source: server_configs/nginx/backend.conf
+    destination: /etc/nginx/sites-available/
+    runas: ubuntu
+  - source: server_configs/supervisor/backend_supervisor.conf
+    destination: /etc/supervisor/conf.d
+    runas: ubuntu
+hooks:
+  BeforeInstall:
+      - location: server_configs/scripts/before_install.sh
+  AfterInstall:
+      - location: server_configs/scripts/after_install.sh
