--- a/buildspec.yml
+++ b/buildspec.yml
@@ -5,7 +5,7 @@ phases:
       - pip install -r requirements.txt
   build:
     commands:
-      - python manage.py mysite
+      - python manage.py runserver
   post_build:
     commands:
       - echo Build completed
